Periodic errorprone cleanup
- bump errorprone version
- disable some extremely common problems to address them one by one later
- fixes of some erros